--- a/Pysteak/main.ipynb
+++ b/Pysteak/main.ipynb
@@ -10,15 +10,15 @@
     "# -*- coding: UTF-8 -*-\n",
     "\"\"\"PySteak Homework Starter.\"\"\"\n",
     "\n",
-    "# @TODO: Import libraries\n",
+    "# Import libraries\n",
     "import csv\n",
     "from pathlib import Path\n",
     "\n",
-    "# @TODO: Set file paths for menu_data.csv and sales_data.csv\n",
+    "# Set file paths for menu_data.csv and sales_data.csv\n",
     "menu_filepath = Path('Resources/menu_data.csv')\n",
     "sales_filepath = Path('Resources/sales_data.csv')\n",
     "\n",
-    "# @TODO: Initialize list objects to hold our menu and sales data\n",
+    "# Initialize list objects to hold our menu and sales data\n",
     "menu = []\n",
     "sales = []\n",
     "menuline_num=0\n",
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "# @TODO: Read in the menu data into the menu list\n",
+    "# Read in the menu data into the menu list\n",
     "with open(menu_filepath, 'r') as file:\n",
     "    \n",
     "    print(type(file))\n",
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "# @TODO: Read in the sales data into the sales list\n",
+    "# Read in the sales data into the sales list\n",
     "with open(sales_filepath, 'r') as file:\n",
     "    \n",
     "    print(type(file))\n",
@@ -97,33 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "id": "17e81863-9cb0-4042-b3ab-39f90561ceaa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['edamame', 'appetizers', 'boiled soybeans, maldon sea salt', '4', '1'],\n",
-       " ['house salad',\n",
-       "  'appetizers',\n",
-       "  'mixed greens, cherry tomatoes, cucumber, house ginger dressing',\n",
-       "  '4',\n",
-       "  '2']]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "menu[0:2:1]\n"
+    "# list slicing test\n",
+    "# menu[0:2:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "id": "143d9a81-dafb-4081-9794-40dbb6f98fbd",
    "metadata": {},
    "outputs": [
@@ -131,16 +116,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'spicy miso ramen': {'01-count': 101566.0, '02-revenue': 1283414.0, '03-cogs': 600144.0, '04-profit': 683270.0}, 'tori paitan ramen': {'01-count': 100620.0, '02-revenue': 1271454.0, '03-cogs': 594550.0, '04-profit': 676904.0}, 'truffle butter ramen': {'01-count': 98732.0, '02-revenue': 1247592.0, '03-cogs': 583388.0, '04-profit': 664204.0}, 'tonkotsu ramen': {'01-count': 102086.0, '02-revenue': 1289984.0, '03-cogs': 603212.0, '04-profit': 686772.0}, 'vegetarian spicy miso': {'01-count': 101318.0, '02-revenue': 1280278.0, '03-cogs': 598672.0, '04-profit': 681606.0}, 'shio ramen': {'01-count': 100966.0, '02-revenue': 1275838.0, '03-cogs': 596612.0, '04-profit': 679226.0}, 'miso crab ramen': {'01-count': 97742.0, '02-revenue': 1235086.0, '03-cogs': 577544.0, '04-profit': 657542.0}, 'nagomi shoyu': {'01-count': 100426.0, '02-revenue': 1268996.0, '03-cogs': 593410.0, '04-profit': 675586.0}, 'soft-shell miso crab ramen': {'01-count': 100418.0, '02-revenue': 1268910.0, '03-cogs': 593370.0, '04-profit': 675540.0}, 'burnt garlic tonkotsu ramen': {'01-count': 99762.0, '02-revenue': 1260626.0, '03-cogs': 589494.0, '04-profit': 671132.0}, 'vegetarian curry + king trumpet mushroom ramen': {'01-count': 97064.0, '02-revenue': 1226536.0, '03-cogs': 573560.0, '04-profit': 652976.0}}\n"
+      "74124\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# @TODO: Initialize dict object to hold our key-value pairs of items and metrics\n",
+    "# Initialize dict object to hold our key-value pairs of items and metrics\n",
     "report = {}\n",
     "\n",
-    "# Initialize a row counter variable\n",
+    "# Initialize row counter, quantity, sales_item, item, price, cost, profit  variables\n",
     "row_count = 0\n",
     "quantity = 0\n",
     "sales_item = 0\n",
@@ -148,23 +133,25 @@
     "price = 0\n",
     "cost = 0\n",
     "profit = 0\n",
-    "# @TODO: Loop over every row in the sales list object\n",
+    "# Loop over every row in the sales list object, capture variables\n",
     "for x in sales:\n",
     "    quantity = float(x[3])\n",
     "    sales_item = x[4]\n",
+    "    # Check if sales_item is not in dictionary keys\n",
     "    if sales_item not in report.keys():\n",
-    "        \n",
+    "        # then initialize values for each sales_item\n",
     "        report[sales_item] = {\n",
     "            \"01-count\": 0,\n",
     "            \"02-revenue\": 0,\n",
     "            \"03-cogs\": 0,\n",
     "            \"04-profit\": 0,\n",
     "        }\n",
+    "    # Loop over every row in menu list object, capture variables\n",
     "    for y in menu:\n",
     "        item = y[0]\n",
     "        price = float(y[3])\n",
     "        cost = float(y[4])\n",
-    "        \n",
+    "        # Loop over every key in dictionary\n",
     "        for z in report.keys():\n",
     "            key = z\n",
     "            if key == item:\n",
@@ -172,7 +159,11 @@
     "                report[sales_item][\"02-revenue\"] += (price * quantity)\n",
     "                report[sales_item][\"03-cogs\"] += (cost * quantity)\n",
     "                report[sales_item][\"04-profit\"] += ((price - cost) * quantity)\n",
-    "print(report)\n"
+    "    row_count += 1\n",
+    "    \n",
+    "\n",
+    "# Print total number of records in sales data\n",
+    "print(\"Total number of records in sales data: \" row_count)\n"
    ]
   },
   {
