--- a/Pysteak/main.ipynb
+++ b/Pysteak/main.ipynb
@@ -108,15 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "id": "143d9a81-dafb-4081-9794-40dbb6f98fbd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "74124\n"
+      "IOPub data rate exceeded.\n",
+      "The Jupyter server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--ServerApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "ServerApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
      ]
     }
    ],
@@ -151,6 +160,8 @@
     "        item = y[0]\n",
     "        price = float(y[3])\n",
     "        cost = float(y[4])\n",
+    "        profit = (price - cost) * quantity\n",
+    "        print(f'The profit for {item} was {profit}')\n",
     "        # Loop over every key in dictionary\n",
     "        for z in report.keys():\n",
     "            key = z\n",
@@ -163,7 +174,12 @@
     "    \n",
     "\n",
     "# Print total number of records in sales data\n",
-    "print(\"Total number of records in sales data: \" row_count)\n"
+    "print(f'Total number of records in sales data: {row_count}')\n",
+    "\n",
+    "\n",
+    "# @TODO: Calculate profit of each item in the menu data\n",
+    "\n",
+    "# @TODO: total number of months, calculate most profitable item, item with highest cost (date and amount) "
    ]
   },
   {
@@ -218,7 +234,7 @@
     "\n",
     "\n",
     "\n",
-    "        # @TODO: Else, the sales item does not equal any fo the item in the menu data, therefore no match\n",
+    "        # @TODO: Else, the sales item does not equal any of the item in the menu data, therefore no match\n",
     "\n",
     "\n",
     "\n",
@@ -240,6 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write to file\n",
     "txt_report = open('report.txt', 'w')\n",
     "txt_report.write(str(txt_report))\n",
     "txt_report.close()"
@@ -252,8 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('report.txt', 'w') as f:\n",
-    "    f.writelines(report)"
+    "\n"
    ]
   },
   {
@@ -263,6 +279,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# graveyard\n",
+    "\n",
+    "with open('report.txt', 'w') as f:\n",
+    "    f.writelines(report)\n",
+    "\n",
     "\n",
     "    else:\n",
     "        report[sales_item][\"01-count\"] += quantity"
