--- a/Pysteak/main.ipynb
+++ b/Pysteak/main.ipynb
@@ -108,24 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 108,
    "id": "143d9a81-dafb-4081-9794-40dbb6f98fbd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
+      "Total number of records in sales data: 74124\n",
+      "{'spicy miso ramen': {'01-count': 9238.0, '02-revenue': 110856.0, '03-cogs': 46190.0, '04-profit': 64666.0}, 'tori paitan ramen': {'01-count': 9156.0, '02-revenue': 119028.0, '03-cogs': 54936.0, '04-profit': 64092.0}, 'truffle butter ramen': {'01-count': 8982.0, '02-revenue': 125748.0, '03-cogs': 62874.0, '04-profit': 62874.0}, 'tonkotsu ramen': {'01-count': 9288.0, '02-revenue': 120744.0, '03-cogs': 55728.0, '04-profit': 65016.0}, 'vegetarian spicy miso': {'01-count': 9216.0, '02-revenue': 110592.0, '03-cogs': 46080.0, '04-profit': 64512.0}, 'shio ramen': {'01-count': 9180.0, '02-revenue': 100980.0, '03-cogs': 45900.0, '04-profit': 55080.0}, 'miso crab ramen': {'01-count': 8890.0, '02-revenue': 106680.0, '03-cogs': 53340.0, '04-profit': 53340.0}, 'nagomi shoyu': {'01-count': 9132.0, '02-revenue': 100452.0, '03-cogs': 45660.0, '04-profit': 54792.0}, 'soft-shell miso crab ramen': {'01-count': 9130.0, '02-revenue': 127820.0, '03-cogs': 63910.0, '04-profit': 63910.0}, 'burnt garlic tonkotsu ramen': {'01-count': 9070.0, '02-revenue': 126980.0, '03-cogs': 54420.0, '04-profit': 72560.0}, 'vegetarian curry + king trumpet mushroom ramen': {'01-count': 8824.0, '02-revenue': 114712.0, '03-cogs': 61768.0, '04-profit': 52944.0}}\n"
      ]
     }
    ],
@@ -137,7 +129,6 @@
     "# Initialize row counter, quantity, sales_item, item, price, cost, profit  variables\n",
     "row_count = 0\n",
     "quantity = 0\n",
-    "sales_item = 0\n",
     "item = 0\n",
     "price = 0\n",
     "cost = 0\n",
@@ -160,27 +151,33 @@
     "        item = y[0]\n",
     "        price = float(y[3])\n",
     "        cost = float(y[4])\n",
-    "        profit = (price - cost) * quantity\n",
-    "        print(f'The profit for {item} was {profit}')\n",
+    "        \n",
     "        # Loop over every key in dictionary\n",
-    "        for z in report.keys():\n",
-    "            key = z\n",
-    "            if key == item:\n",
-    "                report[sales_item][\"01-count\"] += quantity\n",
-    "                report[sales_item][\"02-revenue\"] += (price * quantity)\n",
-    "                report[sales_item][\"03-cogs\"] += (cost * quantity)\n",
-    "                report[sales_item][\"04-profit\"] += ((price - cost) * quantity)\n",
+    "        if sales_item == item:\n",
+    "            report[sales_item][\"01-count\"] += quantity\n",
+    "            report[sales_item][\"02-revenue\"] += (price * quantity)\n",
+    "            report[sales_item][\"03-cogs\"] += (cost * quantity)\n",
+    "            report[sales_item][\"04-profit\"] += ((price - cost) * quantity)\n",
     "    row_count += 1\n",
     "    \n",
-    "\n",
     "# Print total number of records in sales data\n",
     "print(f'Total number of records in sales data: {row_count}')\n",
+    "print(report)\n",
+    "\n",
     "\n",
     "\n",
     "# @TODO: Calculate profit of each item in the menu data\n",
     "\n",
     "# @TODO: total number of months, calculate most profitable item, item with highest cost (date and amount) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aed271a-330d-44f3-a2da-cf04ed41cdcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -251,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "id": "738af7cc-9974-4e0c-93d2-64398c2c07e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write to file\n",
     "txt_report = open('report.txt', 'w')\n",
-    "txt_report.write(str(txt_report))\n",
+    "txt_report.write(str(report))\n",
     "txt_report.close()"
    ]
   },
