most profit item

--- a/Pysteak/main.ipynb
+++ b/Pysteak/main.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "7149326d-08e2-40fa-bad4-6c743fb481a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# -*- coding: UTF-8 -*-\n",
-    "\"\"\"PySteak Homework Starter.\"\"\"\n",
-    "\n",
     "# Import libraries\n",
     "import csv\n",
     "from pathlib import Path\n",
+    "from datetime import datetime\n",
     "\n",
     "# Set file paths for menu_data.csv and sales_data.csv\n",
     "menu_filepath = Path('Resources/menu_data.csv')\n",
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "6c7f0111-add2-4c08-bafb-e130a37c0a6c",
    "metadata": {},
    "outputs": [
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "c51dc7ec-7fe9-4327-b1f6-f86a9e7dd780",
    "metadata": {},
    "outputs": [
@@ -97,18 +95,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "17e81863-9cb0-4042-b3ab-39f90561ceaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['1', '01-01-2017', '7437926611570799', '1', 'spicy miso ramen'],\n",
+       " ['2', '01-01-2017', '7437926611570799', '1', 'spicy miso ramen'],\n",
+       " ['3', '01-01-2017', '8421920068932819', '3', 'tori paitan ramen'],\n",
+       " ['4', '01-01-2017', '8421920068932819', '3', 'tori paitan ramen']]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# list slicing test\n",
-    "# menu[0:2:1]"
+    "sales[0:4:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
+   "id": "7ae7fee8-e11c-438a-95c5-e3fc9191d97f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "143d9a81-dafb-4081-9794-40dbb6f98fbd",
    "metadata": {},
    "outputs": [
@@ -117,7 +137,8 @@
      "output_type": "stream",
      "text": [
       "Total number of records in sales data: 74124\n",
-      "{'spicy miso ramen': {'01-count': 9238.0, '02-revenue': 110856.0, '03-cogs': 46190.0, '04-profit': 64666.0}, 'tori paitan ramen': {'01-count': 9156.0, '02-revenue': 119028.0, '03-cogs': 54936.0, '04-profit': 64092.0}, 'truffle butter ramen': {'01-count': 8982.0, '02-revenue': 125748.0, '03-cogs': 62874.0, '04-profit': 62874.0}, 'tonkotsu ramen': {'01-count': 9288.0, '02-revenue': 120744.0, '03-cogs': 55728.0, '04-profit': 65016.0}, 'vegetarian spicy miso': {'01-count': 9216.0, '02-revenue': 110592.0, '03-cogs': 46080.0, '04-profit': 64512.0}, 'shio ramen': {'01-count': 9180.0, '02-revenue': 100980.0, '03-cogs': 45900.0, '04-profit': 55080.0}, 'miso crab ramen': {'01-count': 8890.0, '02-revenue': 106680.0, '03-cogs': 53340.0, '04-profit': 53340.0}, 'nagomi shoyu': {'01-count': 9132.0, '02-revenue': 100452.0, '03-cogs': 45660.0, '04-profit': 54792.0}, 'soft-shell miso crab ramen': {'01-count': 9130.0, '02-revenue': 127820.0, '03-cogs': 63910.0, '04-profit': 63910.0}, 'burnt garlic tonkotsu ramen': {'01-count': 9070.0, '02-revenue': 126980.0, '03-cogs': 54420.0, '04-profit': 72560.0}, 'vegetarian curry + king trumpet mushroom ramen': {'01-count': 8824.0, '02-revenue': 114712.0, '03-cogs': 61768.0, '04-profit': 52944.0}}\n"
+      "{'spicy miso ramen': {'01-count': 9238.0, '02-revenue': 110856.0, '03-cogs': 46190.0, '04-profit': 64666.0}, 'tori paitan ramen': {'01-count': 9156.0, '02-revenue': 119028.0, '03-cogs': 54936.0, '04-profit': 64092.0}, 'truffle butter ramen': {'01-count': 8982.0, '02-revenue': 125748.0, '03-cogs': 62874.0, '04-profit': 62874.0}, 'tonkotsu ramen': {'01-count': 9288.0, '02-revenue': 120744.0, '03-cogs': 55728.0, '04-profit': 65016.0}, 'vegetarian spicy miso': {'01-count': 9216.0, '02-revenue': 110592.0, '03-cogs': 46080.0, '04-profit': 64512.0}, 'shio ramen': {'01-count': 9180.0, '02-revenue': 100980.0, '03-cogs': 45900.0, '04-profit': 55080.0}, 'miso crab ramen': {'01-count': 8890.0, '02-revenue': 106680.0, '03-cogs': 53340.0, '04-profit': 53340.0}, 'nagomi shoyu': {'01-count': 9132.0, '02-revenue': 100452.0, '03-cogs': 45660.0, '04-profit': 54792.0}, 'soft-shell miso crab ramen': {'01-count': 9130.0, '02-revenue': 127820.0, '03-cogs': 63910.0, '04-profit': 63910.0}, 'burnt garlic tonkotsu ramen': {'01-count': 9070.0, '02-revenue': 126980.0, '03-cogs': 54420.0, '04-profit': 72560.0}, 'vegetarian curry + king trumpet mushroom ramen': {'01-count': 8824.0, '02-revenue': 114712.0, '03-cogs': 61768.0, '04-profit': 52944.0}}\n",
+      "total months of sales data: 24 months\n"
      ]
     }
    ],
@@ -163,7 +184,7 @@
     "# Print total number of records in sales data\n",
     "print(f'Total number of records in sales data: {row_count}')\n",
     "print(report)\n",
-    "\n",
+    "print(f'total months of sales data: 24 months')\n",
     "\n",
     "\n",
     "# @TODO: Calculate profit of each item in the menu data\n",
@@ -173,11 +194,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4aed271a-330d-44f3-a2da-cf04ed41cdcf",
+   "execution_count": 6,
+   "id": "6fbb2908-6921-4216-b16c-9983738a6db3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# defining month counting function\n",
+    "def diff_month(d1, d2):\n",
+    "    return (d1.year - d2.year) * 12 + d1.month - (d2.month - 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4aed271a-330d-44f3-a2da-cf04ed41cdcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Months of sales data: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# turning first and last dates into datetime objects\n",
+    "date1 = sales[0][1]\n",
+    "date_object1 = datetime.strptime(date1, '%m-%d-%Y')\n",
+    "last_day = (row_count - 1)\n",
+    "date2 = sales[last_day][1]\n",
+    "date_object2 = datetime.strptime(date2, '%m-%d-%Y')\n",
+    "\n",
+    "print(f'Months of sales data: {diff_month(date_object2, date_object1)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ec85aeff-14ff-49e1-bc4a-5b862d4ae192",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72560.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def most_profit_item():\n",
+    "    winner = 0\n",
+    "    for item, results in report.items():\n",
+    "        if results['04-profit'] > winner:\n",
+    "            winner = results['04-profit']\n",
+    "    return winner\n",
+    "winner = most_profit_item()\n",
+    "print(winner)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e88c726-17b2-442b-a8c2-9aeb8b62985f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# most profitable item by total and which date\n",
+    "# greatest revenue or greatest cogs by total and which date"
+   ]
   },
   {
    "cell_type": "code",
