final update i think?

--- a/Pysteak/main.ipynb
+++ b/Pysteak/main.ipynb
@@ -174,10 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defining month counting function\n",
+    "# defining month counting function (assuming dates start at beginning of month)\n",
     "def diff_month(d1, d2):\n",
-    "    return (d1.year - d2.year) * 12 + d1.month - (d2.month - 1)\n",
-    "\n"
+    "    return (d1.year - d2.year) * 12 + d1.month - (d2.month - 1)"
    ]
   },
   {
@@ -224,6 +223,7 @@
     "def most_profit_item():\n",
     "    profit = 0\n",
     "    best_item = 0\n",
+    "    # looping through each key as item and each value as results\n",
     "    for item, results in report.items():\n",
     "        if results['04-profit'] > profit:\n",
     "            profit = results['04-profit']\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "id": "964d25c3-f095-40a7-95d4-8e19b069e9c0",
    "metadata": {},
    "outputs": [
@@ -258,15 +258,20 @@
     "    best_date = 0\n",
     "    \n",
     "    for row in sales:        \n",
+    "        # if winning item is in this row & row is in same date as previous, add quantity\n",
     "        if row[4] == item and row[1] == date:\n",
     "            quantity += int(row[3])\n",
+    "        # else if winning item is in this row but row is in different date,\n",
     "        elif row[4] == item and row[1] != date:\n",
+    "            # compare this date's quantity against highest quantity\n",
     "            if quantity > highest_quantity:\n",
     "                highest_quantity = quantity\n",
     "                best_date = date\n",
+    "            # otherwise reset date and quantity\n",
     "            date = row[1]\n",
     "            quantity = int(row[3])\n",
-    "    \n",
+    "            \n",
+    "    # how to get the function to return different variables at different times\n",
     "    if function == 'date':\n",
     "        return best_date\n",
     "    elif function == 'quantity':\n",
@@ -306,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "id": "5e88c726-17b2-442b-a8c2-9aeb8b62985f",
    "metadata": {},
    "outputs": [
@@ -314,12 +319,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The most costly item was soft-shell miso crab ramen\n"
+      "The item with highest cost of goods was soft-shell miso crab ramen\n"
      ]
     }
    ],
    "source": [
-    "# function to find greatest greatest cogs by total and which date\n",
+    "# function to find greatest cogs by total and which date\n",
     "def most_cogs_item():\n",
     "    cogs = 0\n",
     "    costly_item = 0\n",
@@ -329,17 +334,55 @@
     "            costly_item = item\n",
     "    return costly_item\n",
     "\n",
+    "\n",
     "heavy = most_cogs_item()\n",
-    "print(f'The most costly item was {heavy}')"
+    "print(f'The item with highest cost of goods was {heavy}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "b79bd359-a6c9-4421-8d05-f793da32bae4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The date with most sales for soft-shell miso crab ramen was 03-01-2017 with 44 sales.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function to find most costly date for most costly item\n",
+    "def most_cogs_date(heavy, function):\n",
+    "    item = heavy\n",
+    "    date = sales[0][1]\n",
+    "    quantity = 0\n",
+    "    highest_quantity = 0\n",
+    "    best_date = 0\n",
+    "    \n",
+    "    for row in sales:        \n",
+    "        if row[4] == item and row[1] == date:\n",
+    "            quantity += int(row[3])\n",
+    "        elif row[4] == item and row[1] != date:\n",
+    "            if quantity > highest_quantity:\n",
+    "                highest_quantity = quantity\n",
+    "                best_date = date\n",
+    "            date = row[1]\n",
+    "            quantity = int(row[3])\n",
+    "    \n",
+    "    if function == 'date':\n",
+    "        return best_date\n",
+    "    elif function == 'quantity':\n",
+    "        return highest_quantity\n",
+    "    else:\n",
+    "        print(\"Error: type 'date' or 'quantity' as second argument\")\n",
+    "            \n",
+    "print(f\"The date with most sales for {heavy} was {most_cogs_date(heavy, 'date')} with {most_profit_date(heavy, 'quantity')} sales.\")\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -371,12 +414,12 @@
    "source": [
     "# graveyard\n",
     "\n",
-    "with open('report.txt', 'w') as f:\n",
-    "    f.writelines(report)\n",
+    "# with open('report.txt', 'w') as f:\n",
+    "#    f.writelines(report)\n",
     "\n",
     "\n",
-    "    else:\n",
-    "        report[sales_item][\"01-count\"] += quantity"
+    "#    else:\n",
+    "#        report[sales_item][\"01-count\"] += quantity"
    ]
   }
  ],
